<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoctorLogin">

    <ImageView
        android:layout_width="194dp"
        android:layout_height="156dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="48dp"
        android:src="@drawable/logo1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="209dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="131dp"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="133dp"
        android:text="@string/doctor_login"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="385dp"
        android:layout_height="392dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.899">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/doctorUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/enter_your_email"
                android:inputType="textWebEmailAddress"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/doctorPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/doctorLoginButton"
            android:layout_width="292dp"
            android:layout_height="62dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/login"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/doctorSignUpButton"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="85dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="58dp"
            android:text="@string/you_don_t_have_account_sign_up" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>