<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientDashboardFragment">


    <com.smarteist.autoimageslider.SliderView
        android:id="@+id/image_slider"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:sliderAnimationDuration="600"
        app:sliderAutoCycleDirection="back_and_forth"
        app:sliderAutoCycleEnabled="true"
        app:sliderIndicatorAnimationDuration="600"
        app:sliderIndicatorGravity="center_horizontal|bottom"
        app:sliderIndicatorMargin="15dp"
        app:sliderIndicatorOrientation="horizontal"
        app:sliderIndicatorPadding="3dp"
        app:sliderIndicatorRadius="2dp"
        app:sliderIndicatorSelectedColor="#5A5A5A"
        app:sliderIndicatorUnselectedColor="#FFF"
        app:sliderScrollTimeInSec="2"
        app:sliderStartAutoCycle="true" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_book_appointment"
        android:layout_width="176dp"
        android:layout_height="67dp"
        android:layout_below="@id/image_slider"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="350dp"
        android:text="@string/auto_image_slider_tutorial"
        android:textAlignment="center"
        android:textSize="40sp"
        app:cardBackgroundColor="#BEF3FA">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/book_appointment1"
            android:textColor="#009688"
            android:textSize="19dp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_book_status"
        android:layout_width="176dp"
        android:layout_height="67dp"
        android:layout_below="@id/image_slider"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="350dp"
        android:text="@string/auto_image_slider_tutorial"
        android:textAlignment="center"
        android:textSize="40sp"
        app:cardBackgroundColor="#DAF6B9">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/booking_status"
            android:textColor="#2C9BF3"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

</FrameLayout>